--- a/k8s/app/supabase/templates/deployment.yaml
+++ b/k8s/app/supabase/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
             {{- end }}
           {{- end }}
           env:
-{{ include "supabase.renderEnvWithSecrets" .Values.postgres.env | indent 12 }}
+{{ include "supabase.renderServiceEnv" (list . "postgres") | indent 12 }}
           volumeMounts:
             # Realtime migrations
             - name: pg-sql-realtime
@@ -100,7 +100,7 @@ spec:
             {{- end }}
           {{- end }}
           env:
-{{ include "supabase.renderEnvWithSecrets" .Values.supavisor.env | indent 12 }}
+{{ include "supabase.renderServiceEnv" (list . "supavisor") | indent 12 }}
           volumeMounts:
             - name: pooler-config
               mountPath: /etc/pooler/pooler.exs
@@ -122,8 +122,27 @@ spec:
           imagePullPolicy: {{ .Values.auth.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.auth.service.port }}
+          command:
+            - /bin/sh
+            - -c
+            - |
+              export GOTRUE_DB_DATABASE_URL="postgres://supabase_auth_admin:$POSTGRES_PASSWORD@supabase-postgres:5432/postgres"
+              /usr/local/bin/gotrue
           env:
-{{ include "supabase.renderEnvWithSecrets" .Values.auth.env | indent 12 }}
+{{ include "supabase.renderServiceEnv" (list . "auth") | indent 12 }}
+            # Secret references
+            - name: GOTRUE_DB_DATABASE_URL
+              value: "postgres://supabase_auth_admin:$POSTGRES_PASSWORD@supabase-postgres:5432/postgres"
+            - name: GOTRUE_JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: JWT_SECRET
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: POSTGRES_PASSWORD
           {{- with .Values.auth.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
@@ -140,14 +159,30 @@ spec:
           imagePullPolicy: {{ .Values.rest.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.rest.service.port }}
-          {{- if .Values.rest.command }}
           command:
-            {{- range .Values.rest.command }}
-            - {{ . | quote }}
-            {{- end }}
-          {{- end }}
+            - /bin/sh
+            - -c
+            - |
+              export PGRST_DB_URI="postgres://authenticator:$POSTGRES_PASSWORD@supabase-postgres:5432/postgres"
+              postgrest
           env:
-{{ include "supabase.renderEnvWithSecrets" .Values.rest.env | indent 12 }}
+{{ include "supabase.renderServiceEnv" (list . "rest") | indent 12 }}
+            # Secret references
+            - name: PGRST_JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: JWT_SECRET
+            - name: PGRST_APP_SETTINGS_JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: JWT_SECRET
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: POSTGRES_PASSWORD
           {{- with .Values.rest.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
@@ -165,7 +200,23 @@ spec:
           ports:
             - containerPort: {{ .Values.realtime.service.port }}
           env:
-{{ include "supabase.renderEnvWithSecrets" .Values.realtime.env | indent 12 }}
+{{ include "supabase.renderServiceEnv" (list . "realtime") | indent 12 }}
+            # Secret references
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: POSTGRES_PASSWORD
+            - name: API_JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: JWT_SECRET
+            - name: SECRET_KEY_BASE
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: SECRET_KEY_BASE
           {{- with .Values.realtime.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
@@ -182,8 +233,35 @@ spec:
           imagePullPolicy: {{ .Values.storage.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.storage.service.port }}
+          command:
+            - /bin/sh
+            - -c
+            - |
+              export DATABASE_URL="postgres://supabase_storage_admin:$POSTGRES_PASSWORD@supabase-postgres:5432/postgres"
+              exec node dist/main.js
           env:
-{{ include "supabase.renderEnvWithSecrets" .Values.storage.env | indent 12 }}
+{{ include "supabase.renderServiceEnv" (list . "storage") | indent 12 }}
+            # Secret references
+            - name: ANON_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: ANON_KEY
+            - name: SERVICE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: SERVICE_ROLE_KEY
+            - name: PGRST_JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: JWT_SECRET
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: POSTGRES_PASSWORD
           volumeMounts:
             - name: storage-data
               mountPath: /var/lib/storage
@@ -204,7 +282,7 @@ spec:
           ports:
             - containerPort: {{ .Values.imgproxy.service.port }}
           env:
-{{ include "supabase.renderEnv" .Values.imgproxy.env | indent 12 }}
+{{ include "supabase.renderServiceEnv" (list . "imgproxy") | indent 12 }}
           volumeMounts:
             - name: imgproxy-storage
               mountPath: /var/lib/storage
@@ -225,7 +303,13 @@ spec:
           ports:
             - containerPort: {{ .Values.meta.service.port }}
           env:
-{{ include "supabase.renderEnvWithSecrets" .Values.meta.env | indent 12 }}
+{{ include "supabase.renderServiceEnv" (list . "meta") | indent 12 }}
+            # Secret references
+            - name: PG_META_DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: POSTGRES_PASSWORD
           {{- with .Values.meta.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
@@ -247,9 +331,37 @@ spec:
             {{- range .Values.functions.command }}
             - {{ . | quote }}
             {{- end }}
+          {{- else }}
+          command:
+            - /bin/sh
+            - -c
+            - |
+              export SUPABASE_DB_URL="postgresql://postgres:$POSTGRES_PASSWORD@supabase-postgres:5432/postgres"
+              deno run --allow-all --unstable /home/deno/functions/main.ts
           {{- end }}
           env:
-{{ include "supabase.renderEnvWithSecrets" .Values.functions.env | indent 12 }}
+{{ include "supabase.renderServiceEnv" (list . "functions") | indent 12 }}
+            # Secret references
+            - name: JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: JWT_SECRET
+            - name: SUPABASE_ANON_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: ANON_KEY
+            - name: SUPABASE_SERVICE_ROLE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: SERVICE_ROLE_KEY
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: POSTGRES_PASSWORD
           volumeMounts:
             - name: functions-code
               mountPath: /home/deno/functions
@@ -269,8 +381,25 @@ spec:
           imagePullPolicy: {{ .Values.analytics.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.analytics.service.port }}
+          command:
+            - /bin/sh
+            - -c
+            - |
+              export POSTGRES_BACKEND_URL="postgresql://supabase_admin:$POSTGRES_PASSWORD@supabase-postgres:5432/_supabase"
+              exec logflare
           env:
-{{ include "supabase.renderEnvWithSecrets" .Values.analytics.env | indent 12 }}
+{{ include "supabase.renderServiceEnv" (list . "analytics") | indent 12 }}
+            # Secret references
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: POSTGRES_PASSWORD
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: POSTGRES_PASSWORD
           {{- with .Values.analytics.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
@@ -295,7 +424,23 @@ spec:
             - containerPort: {{ .Values.kong.service.ports.http }}
             - containerPort: {{ .Values.kong.service.ports.https }}
           env:
-{{ include "supabase.renderEnvWithSecrets" .Values.kong.env | indent 12 }}
+{{ include "supabase.renderServiceEnv" (list . "kong") | indent 12 }}
+            # Secret references
+            - name: SUPABASE_ANON_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: ANON_KEY
+            - name: SUPABASE_SERVICE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: SERVICE_ROLE_KEY
+            - name: DASHBOARD_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: DASHBOARD_PASSWORD
           volumeMounts:
             - name: kong-config
               mountPath: /home/kong/temp.yml
@@ -318,7 +463,28 @@ spec:
           ports:
             - containerPort: {{ .Values.studio.service.port }}
           env:
-{{ include "supabase.renderEnvWithSecrets" .Values.studio.env | indent 12 }}
+{{ include "supabase.renderServiceEnv" (list . "studio") | indent 12 }}
+            # Secret references
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: POSTGRES_PASSWORD
+            - name: SUPABASE_ANON_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: ANON_KEY
+            - name: SUPABASE_SERVICE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: SERVICE_ROLE_KEY
+            - name: AUTH_JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-secrets
+                  key: JWT_SECRET
           {{- with .Values.studio.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
